--- a/index.html
+++ b/index.html
@@ -1426,10 +1426,10 @@ text-align: center;
             </div>
             <div class="certificates-container">
                 <div class="certificate">
-                    <img class="certificate" src="kk2.png" alt="شهادة الجودة ISO 9001">
+                    <img class="certificate" src="kk2.png" >
                 </div>
                 <div class="certificate">
-                    <img class="certificate" src="kk.png" alt="شهادة السلامة المهنية OHSAS 18001">
+                    <img class="certificate" src="kk.png" >
                 </div>
                
             </div>
